--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "clean": "rm -rf node_modules yarn.lock && yarn cache clean && yarn install && yarn run pod"
   },
   "dependencies": {
     "@react-navigation/native": "^6.0.13",
